# itology

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django.yml
itology/: admin.py  apps.py  config.py  messages.py  models.py  trello_manager.py  urls.py
itology/certificates/: certificates_generator.py
itology/forms/: advert_board.py  login.py
itology/interfaces/: advert.py  emails.py  team.py
itology/migrations/: 0001_initial.py  0002_client_avatar.py  0003_alter_client_options.py  0004_alter_client_user.py
itology/signals/: create_profile.py
itology/templatetags/: custom_tags.py
itology/views/: advert_board.py  login.py  profile.py
itology_app/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  home.css  landing.css  main.css  style.css
static/js/: advert_detail.js  main.js
templates/advert_board/: advert_confirm_delete.html  advert_detail.html  advert_profile.html  home.html
templates/home/: base.html  home.html  landing.html
templates/login/: base.html  change_password.html  home.html  landing.html  landing_base.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  profile.html  register.html
